--- a/Save_and_load_models.ipynb
+++ b/Save_and_load_models.ipynb
@@ -6,7 +6,7 @@
       "name": "Save_and_load_models.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPBw95xRu19/Pomjk12XTHT",
+      "authorship_tag": "ABX9TyPSAi3FP3KBH1JQybKnImlp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -673,6 +673,196 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Manually save models"
+      ],
+      "metadata": {
+        "id": "GV9gjT9Vu1jR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save the weights\n",
+        "basic_model.save_weights('./checkpoints/my-checkpoints')\n",
+        "\n",
+        "#  Create model\n",
+        "model = create_model()\n",
+        "\n",
+        "# Restore model\n",
+        "model.load_weights(\"./checkpoints/my-checkpoints\")\n",
+        "\n",
+        "# Evaluate model\n",
+        "loss, acc = model.evaluate(test_images, test_labels, verbose=2)\n",
+        "print(\"Restored model, accuracy: {:5.2f}%\".format(100 * acc))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h6lBBI20u4ao",
+        "outputId": "e2ae5482-0b60-4159-c02e-12bd65684cb4"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32/32 - 0s - loss: 0.4275 - sparse_categorical_accuracy: 0.8680 - 180ms/epoch - 6ms/step\n",
+            "Restored model, accuracy: 86.80%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##SavedModel format"
+      ],
+      "metadata": {
+        "id": "YS5hcFDHxhR4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create and train a new model instance\n",
+        "model = create_model()\n",
+        "\n",
+        "model.fit(train_images, train_labels, epochs=5)\n",
+        "\n",
+        "# Save the rntire model as a savedmodel\n",
+        "! mkdir -p saved_model\n",
+        "model.save(\"saved_model/my_model\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-5k0xra6xkgH",
+        "outputId": "85cb279b-1193-4086-9c1c-58c21fd55337"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5\n",
+            "32/32 [==============================] - 1s 6ms/step - loss: 1.0831 - sparse_categorical_accuracy: 0.7110\n",
+            "Epoch 2/5\n",
+            "32/32 [==============================] - 0s 5ms/step - loss: 0.3892 - sparse_categorical_accuracy: 0.8940\n",
+            "Epoch 3/5\n",
+            "32/32 [==============================] - 0s 5ms/step - loss: 0.2630 - sparse_categorical_accuracy: 0.9310\n",
+            "Epoch 4/5\n",
+            "32/32 [==============================] - 0s 6ms/step - loss: 0.1910 - sparse_categorical_accuracy: 0.9580\n",
+            "Epoch 5/5\n",
+            "32/32 [==============================] - 0s 5ms/step - loss: 0.1489 - sparse_categorical_accuracy: 0.9680\n",
+            "INFO:tensorflow:Assets written to: saved_model/my_model/assets\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Inspect the saved model directory"
+      ],
+      "metadata": {
+        "id": "MUpeuPSAyw_E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# contains my_model directory\n",
+        "! ls saved_model\n",
+        "\n",
+        "# Contains assets directory, keras_metadata.pb, saved_model.pb and variables folder.\n",
+        "! ls saved_model/my_model/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k3fIKjxZy1AN",
+        "outputId": "82b2a0c8-cd48-4145-f6aa-79654e5cae7c"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "my_model\n",
+            "assets\tkeras_metadata.pb  saved_model.pb  variables\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Reload a fresh keras model"
+      ],
+      "metadata": {
+        "id": "LK4k4d8B0Ilp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_model = keras.models.load_model(\"saved_model/my_model\")\n",
+        "\n",
+        "# Check its architecture\n",
+        "new_model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H_N64zr50MQp",
+        "outputId": "afc6c1e2-1f7a-46a8-8844-5bce86b86f17"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_7\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " dense_14 (Dense)            (None, 512)               401920    \n",
+            "                                                                 \n",
+            " dropout_7 (Dropout)         (None, 512)               0         \n",
+            "                                                                 \n",
+            " dense_15 (Dense)            (None, 10)                5130      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 407,050\n",
+            "Trainable params: 407,050\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "jguUGjGE0j-O"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
