--- a/Customization.ipynb
+++ b/Customization.ipynb
@@ -6,7 +6,7 @@
       "name": "Customization.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMN0BkmuoCNfvwUwwi7xj5T",
+      "authorship_tag": "ABX9TyNt8vk7r4eatCYTMZCF6638",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -585,6 +585,104 @@
           "text": [
             "['my_dense_layer_6/kernel:0']\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Residual Block"
+      ],
+      "metadata": {
+        "id": "wDIJlPP0SnXz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras import layers"
+      ],
+      "metadata": {
+        "id": "P_z0S0tmUieQ"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ResidualBlock(tf.keras.Model):\n",
+        "    def __init__(self, kernel_size, filters):\n",
+        "        super(ResidualBlock, self).__init__(name='')\n",
+        "        filter1, filter2, filter3 = filters\n",
+        "\n",
+        "        self.conv2a = layers.Conv2D(filter1, (1, 1))\n",
+        "        self.bn2a = layers.BatchNormalization()\n",
+        "\n",
+        "        self.conv2b = layers.Conv2D(filter2, kernel_size=kernel_size, padding='same')\n",
+        "        self.bn2b = layers.BatchNormalization()\n",
+        "\n",
+        "        self.conv2c = layers.Conv2D(filter3, (1, 1))\n",
+        "        self.bn2c = layers.BatchNormalization()\n",
+        "    \n",
+        "    def call(self, input_tensor, training=False):\n",
+        "        x = tf.nn.relu(self.bn2a(self.conv2a(input_tensor), training=training))\n",
+        "\n",
+        "        x = tf.nn.relu(self.bn2b(self.conv2b(x), training=training))\n",
+        "\n",
+        "        x = self.bn2c(self.conv2c(x))\n",
+        "\n",
+        "        x += input_tensor\n",
+        "\n",
+        "        return tf.nn.relu(x)\n"
+      ],
+      "metadata": {
+        "id": "usjd9X58SqWF"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "block = ResidualBlock(1, [1, 2, 3])\n",
+        "\n",
+        "_ = block(tf.zeros([1, 2, 3, 3]))"
+      ],
+      "metadata": {
+        "id": "cuLZL6PmWhXC"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "block.layers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DUJEtdEfW5zS",
+        "outputId": "b38b8cbf-f70c-4fa0-8770-902ef21cdd9d"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[<keras.layers.convolutional.Conv2D at 0x7f8b9be17410>,\n",
+              " <keras.layers.normalization.batch_normalization.BatchNormalization at 0x7f8b9bd0ebd0>,\n",
+              " <keras.layers.convolutional.Conv2D at 0x7f8b9bd0fe50>,\n",
+              " <keras.layers.normalization.batch_normalization.BatchNormalization at 0x7f8b9bbaea50>,\n",
+              " <keras.layers.convolutional.Conv2D at 0x7f8b9bbb62d0>,\n",
+              " <keras.layers.normalization.batch_normalization.BatchNormalization at 0x7f8b9baf6dd0>]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
         }
       ]
     }
