--- a/YoloV2Tensorflow.ipynb
+++ b/YoloV2Tensorflow.ipynb
@@ -6,7 +6,7 @@
       "name": "YoloV2Tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO5TO6VAN/Did8GZUnA/ArA",
+      "authorship_tag": "ABX9TyMeS5nAkwYbYVx2EcGbwS0X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C1sZs1lmIbKb",
-        "outputId": "9c190f45-ba9e-4013-f1a1-a25547a5e0fe"
+        "outputId": "f06108c2-288b-4666-e7d3-3969e3409ee0"
       },
       "outputs": [
         {
@@ -66,7 +66,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5eQQa4BbJwMn",
-        "outputId": "9409243c-7890-45f2-b0de-d01e70f9b17b"
+        "outputId": "59bd9ff0-3133-4ea6-fc5a-26131b0bf924"
       },
       "execution_count": 2,
       "outputs": [
@@ -89,24 +89,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OhE8wSfMKU4T",
-        "outputId": "ec0a230c-b941-4922-897a-70a9a0b6c3d6"
+        "outputId": "613e4428-0d4a-4489-8b09-af8f8b3d908c"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-04-08 19:25:13--  http://host.robots.ox.ac.uk/pascal/VOC/voc2012/VOCtrainval_11-May-2012.tar\n",
+            "--2022-04-09 19:31:16--  http://host.robots.ox.ac.uk/pascal/VOC/voc2012/VOCtrainval_11-May-2012.tar\n",
             "Resolving host.robots.ox.ac.uk (host.robots.ox.ac.uk)... 129.67.94.152\n",
             "Connecting to host.robots.ox.ac.uk (host.robots.ox.ac.uk)|129.67.94.152|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1999639040 (1.9G) [application/x-tar]\n",
             "Saving to: ‘VOCtrainval_11-May-2012.tar’\n",
             "\n",
-            "VOCtrainval_11-May- 100%[===================>]   1.86G  20.9MB/s    in 1m 44s  \n",
+            "VOCtrainval_11-May- 100%[===================>]   1.86G  20.9MB/s    in 93s     \n",
             "\n",
-            "2022-04-08 19:26:58 (18.3 MB/s) - ‘VOCtrainval_11-May-2012.tar’ saved [1999639040/1999639040]\n",
+            "2022-04-09 19:32:50 (20.5 MB/s) - ‘VOCtrainval_11-May-2012.tar’ saved [1999639040/1999639040]\n",
             "\n"
           ]
         }
@@ -122,9 +122,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oi_dpeZlNqx9",
-        "outputId": "bedda85f-cdc2-401e-fe99-6fa17681cb55"
+        "outputId": "996aa1d7-c3c6-42b8-d221-1c6dcf835ba1"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -5208,7 +5208,7 @@
       "metadata": {
         "id": "8i2OVpi8OEF8"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -5243,9 +5243,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2LG5dnCKumCE",
-        "outputId": "2af9f04e-430c-443d-dc46-83f2d18dad00"
+        "outputId": "a3a2866b-bcd2-4224-a1ae-88cc723ca57f"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -5317,7 +5317,7 @@
       "metadata": {
         "id": "2YDCJ5yBu-XL"
       },
-      "execution_count": 17,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -5357,9 +5357,9 @@
           "height": 420
         },
         "id": "_0-NY7jG9lfe",
-        "outputId": "6e3e4b45-bb62-427d-d3eb-becc04620e23"
+        "outputId": "b4afd943-5442-4490-ebd0-ea4e248f62c6"
       },
-      "execution_count": 21,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -5453,13 +5453,254 @@
         "\n",
         "        union_area = w1 * h1 + w2 * h2 - intersect_area + 1e-6\n",
         "        return float(intersect_area) / union_area\n",
+        "    \n",
+        "    def find(self, center_w, center_h):\n",
+        "        # Find anchor that best predicts this box\n",
+        "        best_anchor = -1\n",
+        "        max_iou = -1\n",
         "\n",
-        "    \n"
+        "        shifted_box = BoundBox(0, 0, center_w, center_h)\n",
+        "        # For given object find the best box\n",
+        "        for i in range(len(self.anchors)):\n",
+        "            anchor = self.anchors[i]\n",
+        "            iou = self.intersect_over_union(shifted_box, anchor)\n",
+        "            if max_iou < iou:\n",
+        "                best_anchor = i\n",
+        "                max_iou = iou\n",
+        "        \n",
+        "        return best_anchor, max_iou\n"
       ],
       "metadata": {
         "id": "0dt49sqaVNh7"
       },
-      "execution_count": 22,
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Sample usage of BestAnchorBoxFinder class"
+      ],
+      "metadata": {
+        "id": "-P_WkeYn6Lvg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "_ANCHORS01 = np.array([0.08285376, 0.13705531,\n",
+        "                       0.20850361, 0.39420716,\n",
+        "                       0.80552421, 0.77665105,\n",
+        "                       0.42194719, 0.62385487])\n",
+        "\n",
+        "print(\",,\"*40)\n",
+        "print(\"The three example anchor boxes:\")\n",
+        "count = 0\n",
+        "for i in range(0, len(_ANCHORS01), 2):\n",
+        "    print(\"anchor box index={}, w={}, h={}\".format(count, _ANCHORS01[i], _ANCHORS01[i+1]))\n",
+        "    count += 1\n",
+        "\n",
+        "print(\",,\"*40)\n",
+        "print(\"Allocate bounding box of various width and height into the three anchor boxes:\")\n",
+        "babf = BestAnchorBoxFinder(_ANCHORS01)\n",
+        "for w in range(1, 9, 2):\n",
+        "    w /= 10.\n",
+        "    for h in range(1, 9, 2):\n",
+        "        h /= 10.\n",
+        "        best_anchor, max_iou = babf.find(w, h)\n",
+        "        print(\"Bounding box (w = {}, h = {}) --> best  anchor box = {}, iou = {:3.2f}\".format(\n",
+        "            w, h, best_anchor, max_iou\n",
+        "        ))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GO8mDEi-6Vmt",
+        "outputId": "1d3de9fe-c594-4456-b52b-667246be679d"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\n",
+            "The three example anchor boxes:\n",
+            "anchor box index=0, w=0.08285376, h=0.13705531\n",
+            "anchor box index=1, w=0.20850361, h=0.39420716\n",
+            "anchor box index=2, w=0.80552421, h=0.77665105\n",
+            "anchor box index=3, w=0.42194719, h=0.62385487\n",
+            ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\n",
+            "Allocate bounding box of various width and height into the three anchor boxes:\n",
+            "Bounding box (w = 0.1, h = 0.1) --> best  anchor box = 0, iou = 0.63\n",
+            "Bounding box (w = 0.1, h = 0.3) --> best  anchor box = 0, iou = 0.38\n",
+            "Bounding box (w = 0.1, h = 0.5) --> best  anchor box = 1, iou = 0.42\n",
+            "Bounding box (w = 0.1, h = 0.7) --> best  anchor box = 1, iou = 0.35\n",
+            "Bounding box (w = 0.3, h = 0.1) --> best  anchor box = 0, iou = 0.25\n",
+            "Bounding box (w = 0.3, h = 0.3) --> best  anchor box = 1, iou = 0.57\n",
+            "Bounding box (w = 0.3, h = 0.5) --> best  anchor box = 3, iou = 0.57\n",
+            "Bounding box (w = 0.3, h = 0.7) --> best  anchor box = 3, iou = 0.65\n",
+            "Bounding box (w = 0.5, h = 0.1) --> best  anchor box = 1, iou = 0.19\n",
+            "Bounding box (w = 0.5, h = 0.3) --> best  anchor box = 3, iou = 0.44\n",
+            "Bounding box (w = 0.5, h = 0.5) --> best  anchor box = 3, iou = 0.70\n",
+            "Bounding box (w = 0.5, h = 0.7) --> best  anchor box = 3, iou = 0.75\n",
+            "Bounding box (w = 0.7, h = 0.1) --> best  anchor box = 1, iou = 0.16\n",
+            "Bounding box (w = 0.7, h = 0.3) --> best  anchor box = 3, iou = 0.37\n",
+            "Bounding box (w = 0.7, h = 0.5) --> best  anchor box = 2, iou = 0.56\n",
+            "Bounding box (w = 0.7, h = 0.7) --> best  anchor box = 2, iou = 0.78\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rescale_centerxy(obj, config):\n",
+        "    \"\"\"\n",
+        "    obj:    a dictionary containing xmin, xmax, ymin, ymax\n",
+        "    config: a dictionary containing IMAGE_W, GIRD_W, IMAGE_H, GRID_H\n",
+        "    \"\"\"\n",
+        "    center_x = 0.5 * (obj['xmin'] + obj['xmax'])\n",
+        "    center_x = center_x / (float(config['IMAGE_W']) / config['GRID_W'])\n",
+        "    center_y = 0.5 * (obj['ymin'] + obj['ymax'])\n",
+        "    center_y = center_y / (float(config['IMAGE_H']) / config['GRID_H'])\n",
+        "    return center_x, center_y\n",
+        "\n",
+        "def rescale_centerwh(obj, config):\n",
+        "    \"\"\"\n",
+        "    obj:    a dictionary containing xmin, xmax, ymin, ymax\n",
+        "    config: a dictionary containing IMAGE_W, GIRD_W, IMAGE_H, GRID_H\n",
+        "    \"\"\"\n",
+        "    # unit grid cell\n",
+        "    center_w = (obj['xmax'] - obj['xmin']) / (float(config['IMAGE_W']) / config['GRID_W'])\n",
+        "    center_h = (obj['ymax'] - obj['ymin']) / (float(config['IMAGE_H']) / config['GRID_H'])\n",
+        "\n",
+        "    return center_w, center_h"
+      ],
+      "metadata": {
+        "id": "7wZG8jUJ_ULE"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "obj    = {'xmin': 150, 'ymin': 84, 'xmax': 300, 'ymax': 294}\n",
+        "config = {\"IMAGE_W\":416,\"IMAGE_H\":416,\"GRID_W\":13,\"GRID_H\":13}\n",
+        "\n",
+        "center_x, center_y = rescale_centerxy(obj, config)\n",
+        "center_w, center_h = rescale_centerwh(obj, config)\n",
+        "\n",
+        "print(\"cebter_x abd cebter_w should range between 0 and {}\".format(config[\"GRID_W\"]))\n",
+        "print(\"cebter_y abd cebter_h should range between 0 and {}\".format(config[\"GRID_H\"]))\n",
+        "\n",
+        "print(\"center_x = {:06.3f} range between 0 and {}\".format(center_x, config[\"GRID_W\"]))\n",
+        "print(\"center_y = {:06.3f} range between 0 and {}\".format(center_y, config[\"GRID_H\"]))\n",
+        "print(\"center_w = {:06.3f} range between 0 and {}\".format(center_w, config[\"GRID_W\"]))\n",
+        "print(\"center_h = {:06.3f} range between 0 and {}\".format(center_h, config[\"GRID_H\"]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oX5iiaxADtKz",
+        "outputId": "06912831-e0c3-4f0b-bd23-fe95927a5404"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cebter_x abd cebter_w should range between 0 and 13\n",
+            "cebter_y abd cebter_h should range between 0 and 13\n",
+            "center_x = 07.031 range between 0 and 13\n",
+            "center_y = 05.906 range between 0 and 13\n",
+            "center_w = 04.688 range between 0 and 13\n",
+            "center_h = 06.562 range between 0 and 13\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Define a custom Batch generator"
+      ],
+      "metadata": {
+        "id": "LNuFBYpdI_ty"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.utils import Sequence\n",
+        "\n",
+        "class SimpleBatchGenerator(Sequence):\n",
+        "    def __init__(self, images, config, norm=None, shuffle=True):\n",
+        "        \"\"\"\n",
+        "        Config:     a dict containing hyper parameters for training e.g.\n",
+        "            {\n",
+        "                'IMAGE_W'     :416,\n",
+        "                'IMAGE_H'     :426, \n",
+        "                'GRID_W'      :13,\n",
+        "                'GRID_H'      :13,\n",
+        "                'LABELS'      :[\n",
+        "                    'aeroplane',  'bicycle', 'bird',  'boat',      'bottle', \n",
+        "                    'bus',        'car',      'cat',  'chair',     'cow',\n",
+        "                    'diningtable','dog',    'horse',  'motorbike', 'person',\n",
+        "                    'pottedplant','sheep',  'sofa',   'train',   'tvmonitor'\n",
+        "                ], \n",
+        "                'ANCHORS'       : array([\n",
+        "                    1.07709888,   1.78171903,  \n",
+        "                    2.71054693,   5.12469308, \n",
+        "                    10.47181473, 10.09646365,  \n",
+        "                    5.48531347,   8.11011331\n",
+        "                ]), \n",
+        "                BATCH_SIZE      : 16,\n",
+        "                TRUE_BOX_BUFFER: 50\n",
+        "            }\n",
+        "            \"\"\"\n",
+        "\n",
+        "        self.config = config\n",
+        "        self.config['BOX'] = int(len(self.config['ANCHORS']) / 2)\n",
+        "        self.config['CLASS'] = len(self.config['LABELS'])\n",
+        "        self.images = images\n",
+        "        self.bestAnchorBoxFinder = BestAnchorBoxFinder(self.config['ANCHORS'])\n",
+        "        self.image_reader = ImageReader(self.config['IMAGE_H'], \n",
+        "                                        self.config['IMAGE_W'], norm=norm)\n",
+        "        self.shuffle = shuffle\n",
+        "        if self.shuffle:\n",
+        "            np.random.shuffle(self.images)\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return int(np.ceil(float(len(self.images)) / self.config['BATCH_SIZE']))\n",
+        "    \n",
+        "    def __getitem__(self, idx):\n",
+        "        '''\n",
+        "        ===input===\n",
+        "\n",
+        "        idx : non-negative integer value\n",
+        "\n",
+        "        ==output==\n",
+        "\n",
+        "        x_batch: The numpy array of shape (BATCH_SIZE, IMAGE_H, IMAGE_W, N CHANNELS)\n",
+        "\n",
+        "        y_btach: The numpy array of shape (BATCH_SIZE, GRID_H, GRID_W, BOX, 4+1+N CHANNELS)\n",
+        "\n",
+        "        BOX = The number of Anchor box\n",
+        "\n",
+        "        b_batch: The numpy array of shape (batch_size, 1, 1, 1, TRUE_BOX_BUFFER, 4)\n",
+        "        '''\n",
+        "\n",
+        "        "
+      ],
+      "metadata": {
+        "id": "926bfCXXIoL2"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
