--- a/YoloV2Tensorflow.ipynb
+++ b/YoloV2Tensorflow.ipynb
@@ -6,7 +6,7 @@
       "name": "YoloV2Tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMeS5nAkwYbYVx2EcGbwS0X",
+      "authorship_tag": "ABX9TyPfsCWud+TrrqmZAXH5XXEP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C1sZs1lmIbKb",
-        "outputId": "f06108c2-288b-4666-e7d3-3969e3409ee0"
+        "outputId": "88b28fdb-0ffd-4385-a613-36d33db4d134"
       },
       "outputs": [
         {
@@ -66,7 +66,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5eQQa4BbJwMn",
-        "outputId": "59bd9ff0-3133-4ea6-fc5a-26131b0bf924"
+        "outputId": "c39bd496-3d7d-49e8-b285-89cfa6455c3a"
       },
       "execution_count": 2,
       "outputs": [
@@ -89,7 +89,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OhE8wSfMKU4T",
-        "outputId": "613e4428-0d4a-4489-8b09-af8f8b3d908c"
+        "outputId": "d0008233-00cb-470d-c1d7-ff6cc73f8a48"
       },
       "execution_count": 3,
       "outputs": [
@@ -97,16 +97,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-04-09 19:31:16--  http://host.robots.ox.ac.uk/pascal/VOC/voc2012/VOCtrainval_11-May-2012.tar\n",
+            "--2022-04-10 21:40:28--  http://host.robots.ox.ac.uk/pascal/VOC/voc2012/VOCtrainval_11-May-2012.tar\n",
             "Resolving host.robots.ox.ac.uk (host.robots.ox.ac.uk)... 129.67.94.152\n",
             "Connecting to host.robots.ox.ac.uk (host.robots.ox.ac.uk)|129.67.94.152|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1999639040 (1.9G) [application/x-tar]\n",
             "Saving to: ‘VOCtrainval_11-May-2012.tar’\n",
             "\n",
-            "VOCtrainval_11-May- 100%[===================>]   1.86G  20.9MB/s    in 93s     \n",
+            "VOCtrainval_11-May- 100%[===================>]   1.86G  35.1MB/s    in 55s     \n",
             "\n",
-            "2022-04-09 19:32:50 (20.5 MB/s) - ‘VOCtrainval_11-May-2012.tar’ saved [1999639040/1999639040]\n",
+            "2022-04-10 21:41:23 (34.7 MB/s) - ‘VOCtrainval_11-May-2012.tar’ saved [1999639040/1999639040]\n",
             "\n"
           ]
         }
@@ -122,7 +122,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oi_dpeZlNqx9",
-        "outputId": "996aa1d7-c3c6-42b8-d221-1c6dcf835ba1"
+        "outputId": "ab9a6e1c-19a1-403d-8792-177b016e1409"
       },
       "execution_count": 4,
       "outputs": [
@@ -5243,7 +5243,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2LG5dnCKumCE",
-        "outputId": "a3a2866b-bcd2-4224-a1ae-88cc723ca57f"
+        "outputId": "3c48bbe5-fdbc-40de-9a38-d11b17b0f424"
       },
       "execution_count": 6,
       "outputs": [
@@ -5357,7 +5357,7 @@
           "height": 420
         },
         "id": "_0-NY7jG9lfe",
-        "outputId": "b4afd943-5442-4490-ebd0-ea4e248f62c6"
+        "outputId": "73c1da74-cbfb-40d6-9fda-749c6c24f945"
       },
       "execution_count": 8,
       "outputs": [
@@ -5473,7 +5473,7 @@
       "metadata": {
         "id": "0dt49sqaVNh7"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -5517,9 +5517,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GO8mDEi-6Vmt",
-        "outputId": "1d3de9fe-c594-4456-b52b-667246be679d"
+        "outputId": "6bf85e00-6eb0-49cb-c0ca-63461264e635"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -5581,7 +5581,7 @@
       "metadata": {
         "id": "7wZG8jUJ_ULE"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -5606,9 +5606,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oX5iiaxADtKz",
-        "outputId": "06912831-e0c3-4f0b-bd23-fe95927a5404"
+        "outputId": "ce4a50e7-6bda-410b-b7f5-e47bf57686b4"
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -5694,11 +5694,155 @@
         "\n",
         "        b_batch: The numpy array of shape (batch_size, 1, 1, 1, TRUE_BOX_BUFFER, 4)\n",
         "        '''\n",
+        "        l_bound = idx * self.config['BATCH_SIZE']\n",
+        "        r_bound = (idx + 1) * self.config['BATCH_SIZE']\n",
         "\n",
-        "        "
+        "        if r_bound > len(self.images):\n",
+        "            r_bound = len(self.images)\n",
+        "            l_bound = r_bound - self.config['BATCH_SIZE']\n",
+        "\n",
+        "        instance_count = 0\n",
+        "\n",
+        "        # prepare empty storage space\n",
+        "        x_batch = np.zeros((r_bound - l_bound, self.config['IMAGE_H'], \n",
+        "                            self.config['IMAGE_W'], 3))\n",
+        "        b_batch = np.zeros((r_bound - l_bound, 1, 1, 1, \n",
+        "                            self.config['TRUE_BOX_BUFFER'], 4))\n",
+        "        # desired network output\n",
+        "        y_batch = np.zeros((r_bound - l_bound, self.config['GRID_H'], \n",
+        "                            self.config['GRID_W'], self.config['BOX'], \n",
+        "                            4+1+len(self.config['LABELS'])))\n",
+        "        \n",
+        "        for train_instance in self.images[l_bound:r_bound]:\n",
+        "            # augment input image and fix object's position and size\n",
+        "            img, all_objs = self.image_reader.fit(train_instance)\n",
+        "            # constructs output from object's x, y, w, h\n",
+        "            true_box_index = 0\n",
+        "\n",
+        "            for obj in all_objs:\n",
+        "                if obj['xmax'] > obj['xmin'] and obj['ymax'] > obj['ymin'] and obj['name'] in self.config['LABELS']:\n",
+        "                    center_x, center_y = rescale_centerxy(obj, self.config)\n",
+        "\n",
+        "                    grid_x = int(np.floor(center_x))\n",
+        "                    grid_y = int(np.floor(center_y))\n",
+        "\n",
+        "                    if grid_x < self.config['GRID_W'] and grid_y < self.config['GRID_H']:\n",
+        "                        obj_idx = self.config['LABELS'].index(obj['name'])\n",
+        "                        center_w, center_h = rescale_centerwh(obj, self.config)\n",
+        "                        box = [center_x, center_y, center_w, center_h]\n",
+        "                        best_anchor, max_iou = self.bestAnchorBoxFinder.find(center_w, center_h)\n",
+        "\n",
+        "                        y_batch[instance_count, grid_y, grid_x, best_anchor, 0:4] = box \n",
+        "                        y_batch[instance_count, grid_y, grid_x, best_anchor, 4] = 1.     # ground truth confidence is 1\n",
+        "                        y_batch[instance_count, grid_y, grid_x, best_anchor, 5+obj_idx] = 1 # class probability of the object\n",
+        "\n",
+        "                        # assign true_box_index to b_batch\n",
+        "                        b_batch[instance_count, 0, 0, 0, true_box_index] = box\n",
+        "                        true_box_index += 1\n",
+        "                        true_box_index = true_box_index % self.config['TRUE_BOX_BUFFER']\n",
+        "            \n",
+        "            x_batch[instance_count] = img\n",
+        "            instance_count += 1\n",
+        "        return [x_batch, b_batch], y_batch\n",
+        "\n",
+        "    def on_epoch_end(self):\n",
+        "        if self.shuffle:\n",
+        "            return np.random.shuffle(self.images)"
       ],
       "metadata": {
         "id": "926bfCXXIoL2"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "GRID_H,  GRID_W  = 13 , 13\n",
+        "ANCHORS          = _ANCHORS01\n",
+        "ANCHORS[::2]     = ANCHORS[::2]*GRID_W  \n",
+        "ANCHORS[1::2]    = ANCHORS[1::2]*GRID_H  \n",
+        "ANCHORS"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "blxwaUVyx9T2",
+        "outputId": "b608a316-e8ff-4a5a-f268-86b22ed44eb3"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 182.02971072,  301.11051607,  458.08243117,  866.07313052,\n",
+              "       1769.73668937, 1706.30235685,  927.01797643, 1370.60914939])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "IMAGE_H, IMAGE_W = 416, 416\n",
+        "BATCH_SIZE       = 16\n",
+        "TRUE_BOX_BUFFER  = 50\n",
+        "BOX = int(len(ANCHORS)/2)\n",
+        "CLASS = len(LABELS)\n",
+        "\n",
+        "generator_config = {\n",
+        "    'IMAGE_H'         : IMAGE_H, \n",
+        "    'IMAGE_W'         : IMAGE_W,\n",
+        "    'GRID_H'          : GRID_H,  \n",
+        "    'GRID_W'          : GRID_W,\n",
+        "    'BOX'             : BOX,\n",
+        "    'LABELS'          : LABELS,\n",
+        "    'ANCHORS'         : ANCHORS,\n",
+        "    'BATCH_SIZE'      : BATCH_SIZE,\n",
+        "    'TRUE_BOX_BUFFER' : TRUE_BOX_BUFFER,\n",
+        "}\n",
+        "\n",
+        "train_batch_generator = SimpleBatchGenerator(train_images, generator_config, \n",
+        "                                             norm=normalize, shuffle=True)\n",
+        "\n",
+        "[x_batch, b_batch], y_batch = train_batch_generator.__getitem__(idx=1)\n",
+        "\n",
+        "print(\"x_batch: (BATCH_SIZE, IMAGE_H, IMAGE_W, N channels)           = {}\".format(x_batch.shape))\n",
+        "print(\"y_batch: (BATCH_SIZE, GRID_H, GRID_W, BOX, 4 + 1 + N classes) = {}\".format(y_batch.shape))\n",
+        "print(\"b_batch: (BATCH_SIZE, 1, 1, 1, TRUE_BOX_BUFFER, 4)            = {}\".format(b_batch.shape))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S_omh1nbzB0u",
+        "outputId": "b28174fc-6b3c-4947-a518-400acd14ce98"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x_batch: (BATCH_SIZE, IMAGE_H, IMAGE_W, N channels)           = (16, 416, 416, 3)\n",
+            "y_batch: (BATCH_SIZE, GRID_H, GRID_W, BOX, 4 + 1 + N classes) = (16, 13, 13, 4, 25)\n",
+            "b_batch: (BATCH_SIZE, 1, 1, 1, TRUE_BOX_BUFFER, 4)            = (16, 1, 1, 1, 50, 4)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Vo7XTMFC3lTz"
       },
       "execution_count": null,
       "outputs": []
